--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
     "mysql": "^2.18.1",
     "nodemon": "^1.19.3"
   }
